--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,16 @@
         }
     ],
     "require": {
-        "dkozickis/otus-bracket-helper": "^1.0",
+        "dkozickis/otus-bracket-helper": "^1.0.5",
         "symfony/console": "^4.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.2"
+        "friendsofphp/php-cs-fixer": "~2.2",
+        "phpunit/phpunit": "^6.5"
     },
     "scripts": {
-        "lint": "vendor/bin/php-cs-fixer fix"
+        "lint": "vendor/bin/php-cs-fixer fix",
+        "test": "vendor/bin/phpunit"
     },
     "autoload": {
         "psr-4": {
