--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "phpunit/phpunit": "^6.5"
     },
     "scripts": {
-        "lint": "vendor/bin/php-cs-fixer fix",
+        "lint": "vendor/bin/php-cs-fixer fix -vvv",
         "test": "vendor/bin/phpunit"
     },
     "autoload": {
